--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,9 +7,9 @@
     "extends": [
         "eslint:recommended",
         "plugin:react/recommended",
-        "plugin:@typescript-eslint/recommended"
+        "airbnb", 
+        "prettier"
     ],
-    "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
@@ -19,9 +19,15 @@
     },
     "plugins": [
         "react",
-        "@typescript-eslint"
+        "prettier"
     ],
     "rules": {
-
+        "prettier/prettier":"error",
+        "no-unusued-vars":"warn",
+        "no-console":"off",
+        "func-names":"off",
+        "no-process-exit": "warn",
+        "object-shorthand": "off",
+        "class-methods-use-this":"off"
     }
 }
