feat: added react query and axios

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -48,6 +48,12 @@
       "@styles/*": [
         "src/assets/styles*"
       ],
+      "@query/*": [
+        "src/query*"
+      ],
+      "@api/*": [
+        "src/api*"
+      ],
       /* if need more folder, add here*/
     },
   },
