--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "precommit": "lint-staged",
     "prepare": "npx husky && npx husky install",
     "app:lint": "eslint . --fix",
-     "generate-pwa-assets": "pwa-assets-generator --preset minimal public/logo.svg"
+    "generate-pwa-assets": "pwa-assets-generator --preset minimal public/logo.svg"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.45.0",
+    "axios": "^1.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
